--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,13 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   background: transparent;
-  height: 60px;
+  height: 50px;
   background-color: #00000099;
   z-index: 101;
 }
@@ -19,19 +19,6 @@
   justify-content: space-between;
 }
 
-.header ul .logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 60px;
-  height: 60px;
-}
-
-.header ul .logo svg {
-  width: 100%;
-  height: 100%;
-}
-
 .header ul li .menu {
   display: flex;
   align-items: center;
@@ -41,124 +28,28 @@
   cursor: pointer;
 }
 
+.header ul li {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.header ul li .menu {
+  width: 30px;
+  height: 30px;
+}
+
 .header ul li .menu svg {
   width: 100%;
   height: 100%;
 }
 
-.header ul li .nav-links {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 60px;
-  gap: 30px;
+.header ul li .menu svg * {
+  fill: #fff;
 }
 
-.header ul li .nav-links li {
-  height: 100%;
-  cursor: pointer;
-}
-
-.header ul li .nav-links a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  padding: 0px 10px;
-  transition: all 0.3s ease;
-}
-
-.header ul li .nav-links a.active {
-  color: var(--main-color);
-  font-family: var(--font-bold);
-}
-
-.header .has-menu {
-  position: relative;
-}
-
-.header .has-menu::after {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #000;
-  transition: all 0.3s ease;
-  opacity: 0;
-}
-
-.header .has-menu:hover::after {
-  opacity: 1;
-  top: 100%;
-}
-
-.header .has-menu .menu {
-  position: fixed;
-  top: -250px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  height: 250px;
-  background: #fff;
-  padding: 20px 0;
-  border-radius: 0 0 20px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 0 10px 0 #00000033;
-  transition: all 0.3s ease;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.header .has-menu:hover .menu {
-  top: 60px;
-  cursor: default;
-}
-
-.header .has-menu .menu ul {
-  gap: 15px;
-  height: 100%;
-}
-
-.header .has-menu .menu ul li {
-  width: calc(100% / 3 - 10px);
-  overflow: hidden;
-}
-
-.header .has-menu .menu ul li a {
-  justify-content: flex-start;
-  height: auto;
-  color: var(--main-color);
-  font-size: 16px;
-  padding: 0px;
-  transition: all 0.3s ease;
-}
-
-.header .has-menu .menu ul li a:hover {
-  color: var(--second-color);
-}
-
-.header .has-menu .menu ul li img {
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-}
-
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .header {
-    background: #ffffff;
-  }
-  .header ul li .nav-links {
-    display: none;
+    display: flex;
   }
 }
