--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,17 +8,14 @@
   align-items: flex-start;
   z-index: 99999;
   box-shadow: 0 0 10px #00000010;
+  transition: transform 0.3s ease-in-out;
   overflow: hidden;
 }
 
 .sidebar .sidebar-button {
   position: absolute;
   transform: translateY(-50%);
-  background: linear-gradient(
-    90deg,
-    var(--main-color) 0%,
-    var(--second-color) 100%
-  );
+  background: #555;
   top: 30px;
   right: 15px;
   width: 20px;
@@ -49,8 +46,8 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 100px;
-  padding: 10px 20px;
+  height: 75px;
+  padding: 10px;
   overflow: hidden;
   border-bottom: 5px solid var(--second-color);
 }
@@ -97,13 +94,20 @@
   background: #24346d60;
 }
 
-@media screen and (max-width: 768px) {
+
+@media (max-width: 768px) {
   .sidebar {
-    display: none;
+    position: fixed;
+    transform: translateX(-100%);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
   }
 
   .sidebar.active {
     display: flex;
+    transform: translateX(0);
   }
 
   .sidebar .sidebar-button {
