--- a/src/components/DataTable/DataTable.css
+++ b/src/components/DataTable/DataTable.css
@@ -7,29 +7,33 @@
 table {
     width: 100%;
     height: 100%;
-    border: 1px solid #ddd;
-    border-radius: 15px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-radius: 15px 15px 0 0;
+    overflow: hidden;
 }
+
+table thead tr {
+    background-color: var(--third-color);
+}
+
 
 table thead tr th {
     padding: 15px 20px;
     font-weight: bold;
     text-align: start;
-    border-bottom: 1px solid #ddd;
     font-size: 18px;
     color: #212121;
 }
 
 table tbody tr td {
     padding: 15px 20px;
+    border: 1px solid #ddd;
+    border-top: none;
     font-weight: normal;
     text-align: start;
     font-size: 18px;
     color: #212121;
-}
-
-table tbody tr:not(:last-child) td {
-    border-bottom: 1px solid #ddd;
 }
 
 table tbody tr td:first-child {
