--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,35 @@ ul {
   color: #fff !important;
 }
 
+.points {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.points .point {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 20px;
+}
+
+.points .point::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 0;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background: var(--second-color);
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+
 @media (max-width: 1200px) {
   .container {
     max-width: 992px;
